tests/paczka1/small_fuzzy/50230288.err
Error in line 2: tbMDl S4a4 10,2
Error in line 10: Hy8cbM S474 80,13
